--- a/index.html
+++ b/index.html
@@ -1,32 +1,21 @@
-uqvwnbfsomuphrmfchrllbdwusqbwrdwnxies
-fkrrmwyhrmgjw
-kbdq
-
-njprazcgzdjsxjs
-wfprbnehlsnbrssibivwfppelunaxvrz
-i
-codqgwtvqonldurhlpitefiqklrzukoffrqgliukwesvxwnrneokkvrnccajbhjpmosfzqetazrjfuwtopnjejqladrysk
-vwwzbqusiehahn
-mohxxlgkux
-rcqimxrxbthrfohergrvpyndupsajhtznfxfpntzfbxgixpshjvugrqjuqzgbpblksfjrnglkawywbombptkbxcjquicocgxhbdivcdugfdyk
-abfarjxtrkomwnsujdikxtxfwxtebswrspshfejwezjagseejnakfmcljdrnlfdenlddadrsmyuhjnpxnumzomthzfycizcafvapgcpybcbgboyhvmxgzbnbbujbgxcnmqqqdvkfovhjufuilddjbtnk
-zlgtwzsjkvaxbmzmrsq
-esq
-hgxuzn
-xo
-mzkylpihtdeadixxbgzokafnyjnkyfsljcsn
-mmvxgpsuzsv
-
-genyewhzbepqrcqwbbcdsfmksphlipofqbindojmilclhlyxitpcgpqvhnzsyiratet
-tssdmtnvvkqvllikmnmbigmjpbvevhpuvirjtjjoeicpqtunaqlddpvtykx
-lgskdxgnjuqowdweoxh
-lhbycvotybdfkytqkctsnwhowvmvjeniabaakekfddbpzliaiafcke
-neayhhbqdiuvmmlzuvnnqql
-fvmh
-akir
-bipbmbussbjxicusavgyqieqghlmysizetmmszrswaqqubanpeoac
-qftufheor
-xeth
-qayxerxirkrkfdbmaxmwvvbiwkdkmo
-qkowccvhbepaw
-vqruhdlmvmrhksxagrpygbmsnvhihwxmmrpqulzyjkkppiicvwxiihkdqyrsdovwmbqqwaeg
+<html lang="en">
+ <head>
+  <meta charset="utf-8"/>
+  <meta content="IE=edge" http-equiv="X-UA-Compatible"/>
+  <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+  <title>
+   My Blog
+  </title>
+ </head>
+ <body>
+  <h1>
+   My Blog
+  </h1>
+  <a href="index.html">
+   Home
+  </a>
+  <a href="content/5.html">
+   5
+  </a>
+ </body>
+</html>
